The next ID is called using an SQLStatement instead.